<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="org.codeforafrica.citizenreporterandroid.ui.auth.signin.SignInActivity"
    >

  <!-- Login progress -->

  <LinearLayout
        android:id="@+id/email_login_form"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

      <RelativeLayout
          android:layout_width="fill_parent"
          android:padding="10dp"
          android:layout_height="fill_parent" >

        <TextView
            android:id="@+id/imageView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="26sp"
            android:text="Sign In"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true" />

        <Button
            android:id="@+id/sign_in_button_done"
            android:layout_width="wrap_content"
            android:text="Done"
            android:background="@drawable/rounded_dark_button"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true" />

      </RelativeLayout>

      <TextView
          android:layout_width="match_parent"
          android:layout_height="match_parent"
          android:textAllCaps="true"
          android:textStyle="bold"
          android:text="Email Address" />


      <android.support.design.widget.TextInputLayout
          android:id="@+id/sign_in_email_layout"
          android:layout_width="match_parent"
          android:layout_height="wrap_content">

        <AutoCompleteTextView
            android:id="@+id/sign_in_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/prompt_email"
            android:inputType="textEmailAddress"
            android:maxLines="1"/>

      </android.support.design.widget.TextInputLayout>

      <TextView
          android:layout_width="match_parent"
          android:layout_height="match_parent"
          android:paddingTop="15dp"
          android:textAllCaps="true"
          android:textStyle="bold"
          android:text="Password" />

      <android.support.design.widget.TextInputLayout
          android:id="@+id/sign_in_password_layout"
          android:layout_width="match_parent"
          android:layout_height="wrap_content">

        <EditText
            android:id="@+id/sign_in_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/prompt_password"
            android:imeActionId="@+id/login"
            android:imeActionLabel="@string/action_sign_in_short"
            android:imeOptions="actionUnspecified"
            android:inputType="textPassword"
            android:maxLines="1"/>

      </android.support.design.widget.TextInputLayout>

    <TextView
        android:id="@+id/forgot_password"
        android:layout_marginTop="20dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:visibility="gone"
        android:text="Forgot Password?"
        />


    </LinearLayout>

  <com.wang.avi.AVLoadingIndicatorView
      android:id="@+id/sign_in_progress"
      android:layout_marginTop="8dp"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      app:indicatorName="BallScaleMultipleIndicator"
      app:indicatorColor="@color/google_red"
      android:visibility="gone"
      />

</LinearLayout>