<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:scrollbars="vertical"
    android:fillViewport="true"
    tools:context="org.codeforafrica.citizenreporterandroid.main.AboutFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical"
        >

        <!-- TODO: Update blank fragment layout -->
        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">
        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="0.13"
            android:text="Citizen Reporter"
            android:layout_marginTop="16dp"
            android:textSize="24dp"
            android:layout_centerHorizontal="true"/>
        </RelativeLayout>

        <TextView
            android:id="@+id/body"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_margin="16dp"
            android:text="Citizen Reporter is a CodeforAfrica project that provides a simple easy-to-use experience for users, minimising barriers to securely submitting media rich strories to newsrooms."
            android:textAlignment="center" />

        <ImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_gravity="center"
            android:adjustViewBounds="true"
            android:scaleType="fitCenter"
            android:src="@drawable/cfafrica_logo"
            android:visibility="visible" />
        </LinearLayout>
</RelativeLayout>